--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,27 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # Шаг 1: Checkout кода
       - name: Checkout code
-        uses: actions/checkout@v4     
-      
-      # Шаг 4: Деплой на GitHub Pages
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./        # папка с сайтом
-        force_orphan: true
-      
-      # Шаг 5: Уведомление
+        uses: actions/checkout@v4
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./        # тут папка с сайтом
+          force_orphan: true
+
       - name: Success notification
         if: success()
         run: |
           echo "Сайт успешно развернут на GitHub Pages!"
-          echo "URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}" 
+          echo "URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
